# openprocurement.api

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .swp  .travis.yml  AGENTS.md  Dockerfile  DockerfileTest  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  bootstrap.py  bootstrap.sh  buildout.cfg  cachegrind.out.myapp  conftest.py  create_agreements.py  create_tag.sh  docker-compose.yml  docs.cfg  docs.py  push_http_files.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  setup_mongo.sh  versions.cfg  werf.yaml
docs/: HISTORY.txt  Makefile  README.rst  make.bat  swap_languages.py
docs/diagrams/: auth.puml
docs/diagrams/auction/: planning.puml
docs/diagrams/chronograph/: check_status_below_threshold.uml  next_check_below_threshold.puml  next_check_below_threshold.uml
docs/diagrams/classes/: awarding.puml  frameworks.puml  procedure.puml
docs/diagrams/contracting/: api.puml  doc_bus_and_cdb_sequence.puml  doc_bus_sequence.puml  document_data_bus.puml  document_data_bus_detailed.puml  transfer_sequence.puml
docs/diagrams/database/: overview.puml  splitting-1.puml  splitting-2.puml
docs/diagrams/development/: awarding.puml  dps.puml  e_contract_signing_activity.puml  flow.puml  legal_regulation.puml
docs/diagrams/donors/: README.md  components.puml  sequences.puml
docs/diagrams/frameworks/: entities.puml
docs/scripts/: check_fuzzy.py
docs/source/: acceleration.rst  authentication.rst  cluster.rst  complaints-award.rst  complaints-qualification.rst  complaints-tender.rst  complaints.rst  conf.py  constants.rst  errors.rst  index.rst  multiple_lots_tutorial.rst  options.rst  overview.rst  overview.txt  questions.rst  reference.rst  requests.rst  requirements.txt  tendering.rst  tutorial.rst  tutorial.txt  tutorial_stage2EU.rst  tutorial_stage2UA.rst
docs/source/_static/: .gitignore  custom.css
docs/source/agreementcfaua/: index.rst  overview.rst  tutorial.rst
docs/source/agreements/: index.rst  overview.rst  tutorial_cfaua.rst  tutorial_frameworks.rst
docs/source/basic-actions/: acceleration.rst  authentication.rst  cluster.rst  constants.rst  dates.rst  errors.rst  feed.rst  index.rst  opt_fields.rst  options.rst  performance.rst
docs/source/centralized-procurements/: index.rst
docs/source/complaints/: award-complaint-answer.http  award-complaint-claim.http  award-complaint-escalate.http  award-complaint-satisfy.http  award-complaint-submission-claim.http  award-complaint-submission-upload.http  award-complaint-submission.http  award-complaint.http  award-complaints-list.http  complaint-answer.http  complaint-claim.http  complaint-escalate.http  complaint-satisfy.http  complaint-submission-claim.http  complaint-submission-upload.http  complaint-submission.http  complaint.http  complaints-list.http
docs/source/contracting/: index.rst  overview.rst  tutorial.rst
docs/source/developers/: index.rst  procedure_configs.rst  schema.rst  standards.rst  structure.rst
docs/source/development/: awarding_prolongation.rst  collective_quantity_tender.rst  config_has_legal_regulation.rst  contract_change.rst  contracting_electronic_documents.rst  dps-procedure.rst  dps_long_short.rst  e_contract_signing.rst  index.rst  lot_deliveries.rst  pq_transfer_logic_from_bot.rst  request_for_proposal.rst
docs/source/diagrams/: session.uml
docs/source/features/: arma.rst  auction_planning.rst  awarding.rst  awarding_prolongation.rst  collective_quantity_tender.rst  config_has_legal_regulation.rst  contract_change.rst  contracting_electronic_documents.rst  dps_long_short.rst  e_contract_signing.rst  index.rst  lot_deliveries.rst  modify_framework_period.rst  pq_transfer_logic_from_bot.rst  rendering_documents.rst  request_for_proposal.rst
docs/source/frameworks/: index.rst  overview.rst
docs/source/medicines-registry/: index.rst
docs/source/milestones/: tender-delete-lot-milestones-error.http  tender-patch-lot-milestones.http  tender-patch-milestones.http  tender-post-milestones.http
docs/source/multiple_lots_tutorial/: bid-lot1-invalid-view.http  bid-lot1-update-view.http  bid-lot1.http  bid-lot2-update-view.http  bid-lot2.http  bid-lot3-update-view.http  blank-tender-view.http  qualifications-view.http  register_bad_bid.http  register_bad_not_allowed_lot.http  register_ok_bid.http  show_stage2.http  stage2-pending.http  stage2-waiting.http  tender-activate-qualifications.http  tender-award.http  (+14 more)
docs/tests/: auth.ini  conftest.py  test_24hours.py  test_agreement_cfaua.py  test_agreements.py  test_agreements_cfaua.py  test_agreements_frameworks.py  test_basic_actions.py  test_belowthreshold.py  test_centralized_procurements.py  test_cfaselectionua.py  test_cfaua.py  test_competitivedialogue.py  test_contracting.py  test_contracting_api.py  test_contracting_contract.py  test_contracting_econtract.py  test_defense.py  test_electroniccatalogue.py  test_esco.py  test_framework_basic_actions.py  test_framework_config.py  test_framework_dps.py  test_framework_dps_restricted.py  test_framework_electroniccatalogue.py  test_framework_ifi.py  test_framework_open.py  test_framework_open_restricted.py  test_limited.py  test_open.py  test_openeu.py  test_openua.py  test_planning.py  test_pricequotation.py  test_relocation.py  test_tender_basic_actions.py  test_tender_belowthreshold.py  test_tender_cfaselectionua.py  test_tender_cfaua.py  test_tender_competitivedialogue.py  (+16 more)
docs/tests_async/: auth.ini  conftest.py  test_violation_report.py  tests.ini
etc/: auth.ini  constants.ini  service.ini
kube/: config
loadtesting/: bids.py  consistency.py  data.py  docker-compose.yml  feed_ordering.py  plans.py
src/openprocurement/: conftest.py
tests/: auth.ini  base.py  config.ini  conftest.py
tests/docs/: conftest.py  constants.py  test_violation_report.py
tests/factories/: agreement.py  base.py  contract.py  organization.py  tender.py  violation_report.py
tests/violation_report/: test_draft.py  test_violation_report_documents.py
(+9166 files in other folders)
